# NMG-Technologies

./: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  test_scenarios.md  writeup.md
backend/: agents.py  audio_services.py  car_inventory.json  langchain_agent.py  logger.py  main.py  orchestrator.py  prompts.json  tools.py
frontend/: app.js  index.html
