[project]
name = "NMG"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=7.2.7",
    "fastapi>=0.128.0",
    "faster-whisper>=1.2.1",
    "google-generativeai>=0.8.6",
    "numpy>=2.4.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.0.1",
]
